test/standalone/testdata/otel-grpc-headers/resources/gateway.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: otel-headers
spec:
  telemetry:
    metrics:
      sinks:
        - type: OpenTelemetry
          openTelemetry:
            host: 127.0.0.1
            port: 4317
            headers:
              - name: Authorization
                value: Bearer test-api-key
            resourceAttributes:
              service.name: envoy-gateway-test
              service.version: v1.0.0
              deployment.environment: test
    tracing:
      samplingRate: 100
      provider:
        type: OpenTelemetry
        host: 127.0.0.1
        port: 4317
        openTelemetry:
          headers:
            - name: Authorization
              value: Bearer test-api-key
          resourceAttributes:
            service.name: envoy-gateway-test
            service.version: v1.0.0
            deployment.environment: test
    accessLog:
      settings:
        - format:
            type: Text
            text: |
              [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE%
          sinks:
            - type: OpenTelemetry
              openTelemetry:
                host: 127.0.0.1
                port: 4317
                headers:
                  - name: Authorization
                    value: Bearer test-api-key
                resourceAttributes:
                  service.name: envoy-gateway-test
                  service.version: v1.0.0
                  deployment.environment: test
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: otel-headers
  listeners:
    - name: http
      protocol: HTTP
      port: 10080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: httpbin
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: httpbin
spec:
  endpoints:
    - ip:
        address: 127.0.0.1
        port: 8080
